# mentals-ai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.toml  config.toml.sample  mentals_system.prompt  native_tools.toml
agents/: chunker.gen  context_recall.gen  echo.gen  email.gen  game_dev_react.gen  graph.gen  hn_python_tool.gen  hn_top.gen  loop.gen  mario.gen  memes.gen  memes_input_json.gen  memes_json.gen  memory.gen  platformer.gen  python.gen  rivers_python.gen  search.gen  snake.gen  space_invaders.gen  sql_download.gen  svg_self_discovery.gen  tot_game_24.gen  tot_web_search.gen  tree_structure.gen  user_input.gen  user_input_form.gen  web_search.gen  wip_dca.gen  word_chain.gen  writer.gen  youtube.gen  yt_transcript.gen
assets/: modules.txt
include/: agent_executor.h  code_interpreter.h  context.h  core.h  file.h  llm.h  logger.h  memory_controller.h  native_tools.h  pdffile.h  platform.h  tool_registry.h
lib/liboai/: CMakeLists.txt
lib/liboai/components/: audio.cpp  azure.cpp  chat.cpp  completions.cpp  files.cpp  fine_tunes.cpp  images.cpp  models.cpp  moderations.cpp
lib/liboai/core/: authorization.cpp  netimpl.cpp  response.cpp
lib/liboai/include/: liboai.h
lib/liboai/include/components/: azure.h  chat.h  completions.h  edits.h  files.h  fine_tunes.h  images.h  models.h  moderations.h
lib/liboai/include/core/: authorization.h  exception.h  netimpl.h  network.h
lib/treehh/: tree.hh
src/: agent_executor.cpp  agent_executor.h  buffer.h  central_executive.cpp  central_executive.h  chunker.h  class.h  code_interpreter.cpp  context.h  control_unit.h  core.cpp  core.h  data_transfer.h  doc_factory.h  embedding.h  embeddings.h  file.h  file_helpers.h  file_interface.h  file_manager.h  genfile.h  llm.h  logger.cpp  main.cpp  memory_controller.h  native_tools.h  pdf_file.cpp  pdffile.cpp  pdffile.h  pgvector.cpp  pgvector.h  pipeline.h  platform.h  sql_builder.h  test.h  tool_executor.cpp  tool_executor.h  tool_registry.cpp  tool_registry.h  type.h  (+1 more)
src/cli/: clara.hpp
src/doc_types/: doc_file.cpp  doc_file.h  pdf_file.cpp  pdf_file.h  txt_file.cpp  txt_file.h
src/liboai/: CMakeLists.txt
src/liboai/components/: chat.cpp  edits.cpp  embeddings.cpp
src/liboai/include/components/: audio.h  embeddings.h
src/liboai/include/core/: network.h  response.h
src/meta/: meta.hpp
src/text_formats/: docfile.cpp  docfile.h  pdffile.cpp  pdffile.h  txtfile.cpp  txtfile.h
src/tui/: progress_bar.h
web_ui/: chat.html
